--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -79,6 +79,9 @@ services:
       - N8N_LOG_LEVEL=info
       - N8N_ENCRYPTION_KEY=$SERVICE_BASE64_N8N
       - N8N_RUNNERS_ENABLED=true
+
+volumes:
+  n8n-data: null
       - OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS=true
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
       - N8N_COMMUNITY_PACKAGES_ALLOW_TOOL_USAGE=true
