--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       - 'QUEUE_BULL_REDIS_PASSWORD=${REDIS_PASSWORD}'
       - QUEUE_BULL_REDIS_PORT=6379
       - N8N_LOG_LEVEL=info
-      - N8N_ENCRYPTION_KEY='asfasf15519'
+      - N8N_ENCRYPTION_KEY=$SERVICE_BASE64_N8N
       - N8N_RUNNERS_ENABLED=true
       - OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS=true
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
@@ -54,7 +54,7 @@ services:
       - 'QUEUE_BULL_REDIS_PASSWORD=${REDIS_PASSWORD}'
       - QUEUE_BULL_REDIS_PORT=6379
       - N8N_LOG_LEVEL=info
-      - N8N_ENCRYPTION_KEY='asfasf15519'
+      - N8N_ENCRYPTION_KEY=$SERVICE_BASE64_N8N
       - N8N_RUNNERS_ENABLED=true
       - OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS=true
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
@@ -77,7 +77,7 @@ services:
       - 'QUEUE_BULL_REDIS_PASSWORD=${REDIS_PASSWORD}'
       - QUEUE_BULL_REDIS_PORT=6379
       - N8N_LOG_LEVEL=info
-      - N8N_ENCRYPTION_KEY='asfasf15519'
+      - N8N_ENCRYPTION_KEY=$SERVICE_BASE64_N8N
       - N8N_RUNNERS_ENABLED=true
 
 volumes:
