--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,14 +23,14 @@ services:
       - 'QUEUE_BULL_REDIS_PASSWORD=${REDIS_PASSWORD}'
       - QUEUE_BULL_REDIS_PORT=6379
       - N8N_LOG_LEVEL=info
-      - 'N8N_ENCRYPTION_KEY=${SERVICE_BASE64_N8N}'
+      - N8N_ENCRYPTION_KEY=$SERVICE_BASE64_N8N
       - N8N_RUNNERS_ENABLED=true
       - OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS=true
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
       - N8N_COMMUNITY_PACKAGES_ALLOW_TOOL_USAGE=true
       - 'NODE_FUNCTION_ALLOW_EXTERNAL=*'
     volumes:
-      - 'n8n-data:/home/node/.n8n'
+      - 'n8n2-data:/home/node/.n8n2'
     healthcheck:
       test: ['CMD-SHELL', 'wget -qO- http://127.0.0.1:5678/ || exit 1']
       interval: 5s
@@ -54,7 +54,7 @@ services:
       - 'QUEUE_BULL_REDIS_PASSWORD=${REDIS_PASSWORD}'
       - QUEUE_BULL_REDIS_PORT=6379
       - N8N_LOG_LEVEL=info
-      - 'N8N_ENCRYPTION_KEY=${SERVICE_BASE64_N8N}'
+      - N8N_ENCRYPTION_KEY=$SERVICE_BASE64_N8N
       - N8N_RUNNERS_ENABLED=true
       - OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS=true
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
@@ -77,8 +77,8 @@ services:
       - 'QUEUE_BULL_REDIS_PASSWORD=${REDIS_PASSWORD}'
       - QUEUE_BULL_REDIS_PORT=6379
       - N8N_LOG_LEVEL=info
-      - 'N8N_ENCRYPTION_KEY=${SERVICE_BASE64_N8N}'
+      - N8N_ENCRYPTION_KEY=$SERVICE_BASE64_N8N
       - N8N_RUNNERS_ENABLED=true
 
 volumes:
-  n8n-data: null
+  n8n2-data: null
