--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     command: start
     environment:
       - SERVICE_FQDN_N8N_5678
-      - 'N8N_EDITOR_BASE_URL=${SERVICE_FQDN_N8N}'
+      - 'N8N_EDITOR_BASE_URL=${SERVICE_URL_N8N}'
       - 'WEBHOOK_URL=${SERVICE_URL_N8N}'
       - 'N8N_HOST=${SERVICE_URL_N8N}'
       - 'GENERIC_TIMEZONE=${GENERIC_TIMEZONE:-America/Sao_Paulo}'
