--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,6 @@
 services:
   n8n:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: n8n-custom:latest
+    image: n8nio/n8n:latest
     command: start
     environment:
       - SERVICE_FQDN_N8N_5678
@@ -39,7 +36,7 @@ services:
       retries: 10
 
   n8n_worker:
-    image: n8n-custom:latest
+    image: n8nio/n8n:latest
     command: worker
     environment:
       - 'GENERIC_TIMEZONE=${GENERIC_TIMEZONE:-America/Sao_Paulo}'
@@ -62,7 +59,7 @@ services:
       - N8N_COMMUNITY_PACKAGES_ALLOW_TOOL_USAGE=true
       - 'NODE_FUNCTION_ALLOW_EXTERNAL=*'
   n8n_webhook:
-    image: n8n-custom:latest
+    image: n8nio/n8n:latest
     command: webhook
     environment:
       - 'GENERIC_TIMEZONE=${GENERIC_TIMEZONE:-America/Sao_Paulo}'
